21-Mar-2013 Added C.OSXAppBundle module type, for creating the directory structure for an OSX application bundle, i.e. <name>.app/Contents/MacOS.

21-Mar-2013 Changed Opus.Core.BaseOptionCollection.FinalizeOptions to take a DependencyNode rather than a Target.

08-Mar-2013 Adding ObjectiveCTest1 and CocoaTest1 test packages.

08-Mar-2013 Introduced ObjectiveC and ObjectiveC++ support into C-dev, and Gcc-4.0 for OSX.

08-Mar-2013 Moved Win32 Resource Compiler dependency from the C package to the VisualCCommon package.

23-Feb-2013 Throw an exception if the package version specified on the command line does not match the *single* version in the package definition file.

23-Feb-2013 From the C package, deprecating the addition of the #define D_OPUS_PLATFORM_<specific EPlatform>. Now D_OPUS_PLATFORM_WINDOWS, D_OPUS_PLATFORM_LINUX, D_OPUS_PLATFORM_OSX are set. Use D_OPUS_PLATFORM_BITS to distinguish between 32 and 64 bit builds.

15-Feb-2012 Adding more circular dependency analysis to avoid issues generating graphs.

07-Feb-2012 Fixing -createpackageat such that an invalidly specified pathname does not result in the creation of any directories.

06-Feb-2012 Setting the number of jobs to zero, will now set the job count to be equal to the number of processors available.

06-Feb-2013 Loosened requirements for -showdefinition to locate packages in package roots. If versions of a package are available, but does not match one desired, this will not throw an exception, but will indicate a missing package in the results.

06-Feb-2013 Released 0.50 Alpha 2
