@@ -230,7 +230,6 @@ namespace Opus.Core
             }
 
             module.ExecuteOptionUpdate(target);
-            options.FinalizeOptions(node);
 
             return options;
         }
